light text cleanup and figure formatting

--- a/index.ipynb
+++ b/index.ipynb
@@ -12,9 +12,11 @@
     "\n",
     "## Contents\n",
     " \n",
-    "- [DC_Flawed_Steel_Cased_Wells.ipynb](notebooks/DC_Flawed_Steel_Cased_Wells.ipynb): examines the feasibility of using DC resistivity for detecting a flaw in a steel-cased well and investigates the impact of parameters such as the background conductivity on our ability to detect a flaw from data collected at the surface. This notebook was used to produce Figures 1, 2, 4, 5, 6, 9, 10\n",
+    "- [1_DC_Flawed_Steel_Cased_Wells.ipynb](notebooks/1_DC_Flawed_Steel_Cased_Wells.ipynb): examines the feasibility of using DC resistivity for detecting a flaw in a steel-cased well and investigates the impact of parameters such as the background conductivity on our ability to detect a flaw from data collected at the surface. This notebook was used to produce Figures 1, 2, 4, 5, 6, 9, 10\n",
     "\n",
-    "- \n",
+    "- []\n",
+    "\n",
+    "- [3_DC_Flawed_Steel_Cased_Wells_layer](notebooks/3_DC_Flawed_Steel_Cased_Wells_layer)\n",
     "\n",
     "\n",
     "## Usage\n",
@@ -54,6 +56,13 @@
     "\n",
     "## Contact\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
