organization of notebooks, include info about what figures they reproduce in the header

--- a/appendix-notebooks/DC_target2.ipynb
+++ b/appendix-notebooks/DC_target2.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DC Source Location\n",
+    "# DC 3D Target\n",
     "\n",
     "[Lindsey Heagy](http://github.com/lheagy)\n",
     "\n",
