--- a/index.ipynb
+++ b/index.ipynb
@@ -12,11 +12,41 @@
     "\n",
     "## Contents\n",
     " \n",
-    "- [1_DC_Flawed_Steel_Cased_Wells.ipynb](notebooks/1_DC_Flawed_Steel_Cased_Wells.ipynb): examines the feasibility of using DC resistivity for detecting a flaw in a steel-cased well and investigates the impact of parameters such as the background conductivity on our ability to detect a flaw from data collected at the surface. This notebook was used to produce Figures 1, 2, 4, 5, 6, 9, 10\n",
+    "- [1_DC_Flawed_Steel_Cased_Wells.ipynb](notebooks/1_DC_Flawed_Steel_Cased_Wells.ipynb) \n",
+    "    - examines the feasibility of using DC resistivity for detecting a flaw in a steel-cased well and investigates the impact of parameters such as the background conductivity on our ability to detect a flaw from data collected at the surface. \n",
+    "    - This notebook was used to produce Figures 1, 2, 4, 5, 6, 9, 10, 11\n",
     "\n",
-    "- []\n",
+    "- [2_DC_Flawed_Steel_Cased_Wells_Short_well.ipynb](notebooks/2_DC_Flawed_Steel_Cased_Wells_Short_well.ipynb)\n",
+    "    - looks at hte impact of the vertical extent of the flaw on the distribution of charges.\n",
+    "    - Used to produce Figure 3. \n",
     "\n",
-    "- [3_DC_Flawed_Steel_Cased_Wells_layer](notebooks/3_DC_Flawed_Steel_Cased_Wells_layer)\n",
+    "- [3_DC_Flawed_Steel_Cased_Wells_layer](notebooks/3_DC_Flawed_Steel_Cased_Wells_layer) \n",
+    "    - looks at the impact of a conductive or resistive layer on our ability to detect a flaw. \n",
+    "    - Used to create Figures 7, 8\n",
+    "\n",
+    "- [4_DC_source_location.ipynb](notebooks/4_DC_source_location.ipynb)\n",
+    "    - looks at the impact of the source electrode location on our ability to deliver current to depth. \n",
+    "    - This was used to produce Figures 12, 13\n",
+    "\n",
+    "- [5_DC_target.ipynb](notebooks/5_DC_target.ipynb)\n",
+    "    - Examines our ability to excite a conductive or resistive target at depth, looks at the impact of having an electrical connection (or not) between the target and the casing\n",
+    "    - This notebook was used to produce Tables 1, 2 and Figures 14, 15, 16, 17, 18\n",
+    "\n",
+    "- [6_DC_target_3D_cartesian.ipynb](notebooks/6_DC_target_3D_cartesian.ipynb)\n",
+    "    - here, we use a born approximation approach to examine our ability to excite a target offset from the well. \n",
+    "    - This notebook was used to produce Figures 19, 20, 21 \n",
+    "\n",
+    "- [7_DC_Approximating_Steel_Cased_Wells.ipynb](notebooks/7_DC_Approximating_Steel_Cased_Wells.ipynb)\n",
+    "    - This notebook looks at approximations of a steel cased well by a solid cylinder, either with a conductivity equal to steel, or a conductivity that preserves the cross-sectional conductance of the well. \n",
+    "    - This notebook was used to produce Figures 22, 23\n",
+    "\n",
+    "- [8_DC_Approximating_Steel_Cased_Wells_layered_background.ipynb](notebooks/8_DC_Approximating_Steel_Cased_Wells_layered_background.ipynb)\n",
+    "    - Similar to notebook 7, this notebook looks at approximations to the steel cased well by a solid cylinder in a layered background. \n",
+    "    - It was used to produce Figures 24, 25\n",
+    "\n",
+    "- [9_DC_Approximating_Steel_Cased_Wells_Cartesian.ipynb](notebooks/9_DC_Approximating_Steel_Cased_Wells_Cartesian.ipynb)\n",
+    "    - This notbook looks at approximations of the steel cased well onto a cartesian mesh. \n",
+    "    - This notebook was used to create Figure 26 \n",
     "\n",
     "\n",
     "## Usage\n",
@@ -29,10 +59,10 @@
     "git clone https://github.com/simpeg-research/heagy_2018_emcyl.git\n",
     "```\n",
     "\n",
-    "Then `cd` into the `heagy_2018_emcyl`\n",
+    "Then `cd` into the `heagy-2018-dc-casing`\n",
     "\n",
     "```\n",
-    "cd heagy_2018_emcyl\n",
+    "cd heagy-2018-dc-casing\n",
     "```\n",
     "\n",
     "To setup your software environment, we recommend you use the provided conda environment\n",
@@ -52,9 +82,28 @@
     "jupyter notebook\n",
     "```\n",
     "\n",
+    "## Running the notebooks\n",
+    "\n",
+    "Each cell of code can be run with `shift + enter` or you can run the entire notebook by selecting `cell`, `Run All` in the toolbar. \n",
+    "\n",
+    "<img src=\"https://raw.githubusercontent.com/simpeg-research/heagy-2018-emcyl/master/figures/cell_run_all.png\" width=80% align=\"middle\">\n",
+    "\n",
+    "For more information on running Jupyter notebooks, see the [Jupyter Documentation](https://jupyter.readthedocs.io/en/latest/)\n",
+    "\n",
+    "\n",
     "## Citation\n",
     "\n",
-    "## Contact\n"
+    "coming soon... \n",
+    "\n",
+    "\n",
+    "## Issues\n",
+    "If you run into problems or bugs, please let us know by [creating an issue](https://github.com/simpeg-research/heagy-2018-dc-casing/issues/new) in this repository.\n",
+    "\n",
+    "\n",
+    "## License\n",
+    "\n",
+    "These notebooks are licensed under the [MIT License](/LICENSE) which allows academic and commercial re-use and adaptation of this work.  \n",
+    "\n"
    ]
   },
   {
