--- a/index.ipynb
+++ b/index.ipynb
@@ -4,56 +4,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**| [Contents](#Contents) | [Usage](#Usage) | [Running the notebooks](#Running-the-notebooks) | [Citation](#Citation) | [Issues](#Issues) | [License](#License) |**\n",
     "# Direct current resistivity with steel-cased wells\n",
     "\n",
-    "_Lindsey J. Heagy and Douglas W. Oldenburg_\n",
+    "These notebooks were used to perform the analysis and generate the figures shown _\"Direct current resistivity with steel-cased wells\"_ by [Lindsey Heagy](https://github.com/lheagy) and [Doug Oldenburg](https://github.com/dougoldenburg) submitted to Geophysical Journal International, as well as that shown in Chapter 4 of the thesis [Electromagnetic imaging of subsurface injections](https://github.com/lheagy/phd-thesis).\n",
     "\n",
-    "These notebooks were used to perform the analysis and generate the figures shown _\"Direct current resistivity with steel-cased wells\"_ submitted to Geophysical Journal International. \n",
+    "We examine the use of DC resistivity for detecting flaws in a well in a casing integrity experiment, and examine factors influencing our ability to excite and detect a target at depth. \n",
+    "\n",
+    "<img src=\"figures/casing_integrity_basics.png\" width=60% align=\"middle\">\n",
     "\n",
     "## Contents\n",
     " \n",
     "- [1_DC_Flawed_Steel_Cased_Wells.ipynb](notebooks/1_DC_Flawed_Steel_Cased_Wells.ipynb) \n",
     "    - examines the feasibility of using DC resistivity for detecting a flaw in a steel-cased well and investigates the impact of parameters such as the background conductivity on our ability to detect a flaw from data collected at the surface. \n",
-    "    - This notebook was used to produce Figures 1, 2, 4, 5, 6, 9, 10, 11\n",
+    "    - This notebook was used to produce:\n",
+    "        - Figures 1, 2, 4, 5, 6, 9, 10, 11 in Heagy & Oldenburg (2018)\n",
+    "        - Figures 4.1, 4.2, 4.4, 4.5, 4.6, 4.9, 4.10 and 4.11 in the thesis\n",
     "\n",
     "- [2_DC_Flawed_Steel_Cased_Wells_Short_well.ipynb](notebooks/2_DC_Flawed_Steel_Cased_Wells_Short_well.ipynb)\n",
     "    - looks at hte impact of the vertical extent of the flaw on the distribution of charges.\n",
-    "    - Used to produce Figure 3. \n",
+    "    - Used to produce:\n",
+    "        - Figure 3 in Heagy & Oldenburg (2018) \n",
+    "        - Figure 4.3 in the thesis\n",
     "\n",
     "- [3_DC_Flawed_Steel_Cased_Wells_layer](notebooks/3_DC_Flawed_Steel_Cased_Wells_layer) \n",
     "    - looks at the impact of a conductive or resistive layer on our ability to detect a flaw. \n",
-    "    - Used to create Figures 7, 8\n",
+    "    - Used to create:\n",
+    "        - Figures 7, 8 in Heagy & Oldenburg (2018)\n",
+    "        - Figures 4.7 and 4.8 in the thesis\n",
     "\n",
     "- [4_DC_source_location.ipynb](notebooks/4_DC_source_location.ipynb)\n",
     "    - looks at the impact of the source electrode location on our ability to deliver current to depth. \n",
-    "    - This was used to produce Figures 12, 13\n",
+    "    - This was used to produce:\n",
+    "        - Figures 12, 13 in Heagy & Oldenburg (2018)\n",
+    "        - Figures 4.12 and 4.13 in the thesis\n",
     "\n",
     "- [5_DC_target.ipynb](notebooks/5_DC_target.ipynb)\n",
     "    - Examines our ability to excite a conductive or resistive target at depth, looks at the impact of having an electrical connection (or not) between the target and the casing\n",
-    "    - This notebook was used to produce Tables 1, 2 and Figures 14, 15, 16, 17, 18\n",
+    "    - This notebook was used to produce:\n",
+    "        - Tables 1, 2 and Figures 14, 15, 16, 17, 18 in Heagy & Oldenburg (2018)\n",
+    "        - Tables 4.1, 4.2 and Figures 4.14, 4.15, 4.16, 4.17, 4.18 in the thesis\n",
     "\n",
     "- [6_DC_target_3D_cartesian.ipynb](notebooks/6_DC_target_3D_cartesian.ipynb)\n",
     "    - here, we use a born approximation approach to examine our ability to excite a target offset from the well. \n",
-    "    - This notebook was used to produce Figures 19, 20, 21 \n",
+    "    - This notebook was used to produce:\n",
+    "        - Figures 19, 20, 21 in Heagy & Oldenburg (2018)\n",
+    "        - Figures 4.19, 4.20, 4.21 in the thesis\n",
     "\n",
     "- [7_DC_Approximating_Steel_Cased_Wells.ipynb](notebooks/7_DC_Approximating_Steel_Cased_Wells.ipynb)\n",
     "    - This notebook looks at approximations of a steel cased well by a solid cylinder, either with a conductivity equal to steel, or a conductivity that preserves the cross-sectional conductance of the well. \n",
-    "    - This notebook was used to produce Figures 22, 23\n",
+    "    - This notebook was used to produce:\n",
+    "        - Figures 22, 23 in Heagy & Oldenburg (2018)\n",
+    "        - Figures 4.22, 4.23 in the thesis\n",
     "\n",
     "- [8_DC_Approximating_Steel_Cased_Wells_layered_background.ipynb](notebooks/8_DC_Approximating_Steel_Cased_Wells_layered_background.ipynb)\n",
     "    - Similar to notebook 7, this notebook looks at approximations to the steel cased well by a solid cylinder in a layered background. \n",
-    "    - It was used to produce Figures 24, 25\n",
+    "    - It was used to produce:\n",
+    "        - Figures 24, 25 in Heagy & Oldenburg (2018)\n",
+    "        - Figures 4.24, 4.25 in the thesis\n",
     "\n",
     "- [9_DC_Approximating_Steel_Cased_Wells_Cartesian.ipynb](notebooks/9_DC_Approximating_Steel_Cased_Wells_Cartesian.ipynb)\n",
     "    - This notbook looks at approximations of the steel cased well onto a cartesian mesh. \n",
-    "    - This notebook was used to create Figure 26 \n",
+    "    - This notebook was used to create:\n",
+    "        - Figure 26 in Heagy & Oldenburg (2018)\n",
+    "        - Figures 4.26 in the thesis\n",
     "\n",
     "\n",
     "## Usage\n",
     "\n",
     "To run them locally, you will need to have python installed, preferably through [anaconda](https://www.anaconda.com/download/).\n",
     "\n",
-    "You can then clone this reposiroty. From a command line, run\n",
+    "You can then clone this repository. From a command line, run\n",
     "\n",
     "```\n",
     "git clone https://github.com/simpeg-research/heagy-2018-dc-casing.git\n",
@@ -130,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
