--- a/notebooks/6_DC_target_3D_cartesian.ipynb
+++ b/notebooks/6_DC_target_3D_cartesian.ipynb
@@ -31,7 +31,7 @@
     "from string import ascii_lowercase\n",
     "\n",
     "from SimPEG.EM import TDEM\n",
-    "from SimPEG import Utils, Maps\n",
+    "from SimPEG import Utils, Maps, versions\n",
     "\n",
     "import casingSimulations as casingSim\n",
     "\n",
@@ -2051,6 +2051,80 @@
    ],
    "source": [
     "100/(4*np.pi*1e-1*925**3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table style='border: 3px solid #ddd;'>\n",
+       "  <tr>\n",
+       "     <td style='text-align: center; font-weight: bold; font-size: 1.2em; border: 2px solid #fff;' colspan='8'>Sun Oct 28 12:17:46 2018 PDT</td>\n",
+       "  </tr>\n",
+       "  <tr>\n",
+       "    <td style='text-align: right; background-color: #ccc; border: 2px solid #fff;'>Darwin</td>\n",
+       "    <td style='text-align: left; border: 2px solid #fff;'>OS</td>\n",
+       "    <td style='text-align: right; background-color: #ccc; border: 2px solid #fff;'>4</td>\n",
+       "    <td style='text-align: left; border: 2px solid #fff;'>CPU(s)</td>\n",
+       "    <td style='text-align: right; background-color: #ccc; border: 2px solid #fff;'>1.15.2</td>\n",
+       "    <td style='text-align: left; border: 2px solid #fff;'>numpy</td>\n",
+       "    <td style='text-align: right; background-color: #ccc; border: 2px solid #fff;'>1.1.0</td>\n",
+       "    <td style='text-align: left; border: 2px solid #fff;'>scipy</td>\n",
+       "  </tr>\n",
+       "  <tr>\n",
+       "    <td style='text-align: right; background-color: #ccc; border: 2px solid #fff;'>0.9.2</td>\n",
+       "    <td style='text-align: left; border: 2px solid #fff;'>SimPEG</td>\n",
+       "    <td style='text-align: right; background-color: #ccc; border: 2px solid #fff;'>0.28.5</td>\n",
+       "    <td style='text-align: left; border: 2px solid #fff;'>cython</td>\n",
+       "    <td style='text-align: right; background-color: #ccc; border: 2px solid #fff;'>0.5.2</td>\n",
+       "    <td style='text-align: left; border: 2px solid #fff;'>properties</td>\n",
+       "    <td style='text-align: right; background-color: #ccc; border: 2px solid #fff;'>0.2.0</td>\n",
+       "    <td style='text-align: left; border: 2px solid #fff;'>vectormath</td>\n",
+       "  </tr>\n",
+       "  <tr>\n",
+       "    <td style='text-align: right; background-color: #ccc; border: 2px solid #fff;'>0.4.0</td>\n",
+       "    <td style='text-align: left; border: 2px solid #fff;'>discretize</td>\n",
+       "    <td style='text-align: right; background-color: #ccc; border: 2px solid #fff;'>0.1.2</td>\n",
+       "    <td style='text-align: left; border: 2px solid #fff;'>pymatsolver</td>\n",
+       "    <td style='text-align: right; background-color: #ccc; border: 2px solid #fff;'>7.0.1</td>\n",
+       "    <td style='text-align: left; border: 2px solid #fff;'>IPython</td>\n",
+       "    <td style='text-align: right; background-color: #ccc; border: 2px solid #fff;'>7.4.2</td>\n",
+       "    <td style='text-align: left; border: 2px solid #fff;'>ipywidgets</td>\n",
+       "  </tr>\n",
+       "  <tr>\n",
+       "    <td style='text-align: right; background-color: #ccc; border: 2px solid #fff;'>3.0.0</td>\n",
+       "    <td style='text-align: left; border: 2px solid #fff;'>matplotlib</td>\n",
+       "    <td style= border: 2px solid #fff;'></td>\n",
+       "    <td style= border: 2px solid #fff;'></td>\n",
+       "    <td style= border: 2px solid #fff;'></td>\n",
+       "    <td style= border: 2px solid #fff;'></td>\n",
+       "    <td style= border: 2px solid #fff;'></td>\n",
+       "    <td style= border: 2px solid #fff;'></td>\n",
+       "  </tr>\n",
+       "  <tr>\n",
+       "     <td style='text-align: center; border: 2px solid #fff;' colspan='8'>3.6.6 | packaged by conda-forge | (default, Jul 26 2018, 09:55:02) \n",
+       "[GCC 4.2.1 Compatible Apple LLVM 6.1.0 (clang-602.0.53)]</td>\n",
+       "  </tr>\n",
+       "  <tr>\n",
+       "     <td style='text-align: center; background-color: #ddd;border: 2px solid #fff;' colspan='8'>Intel(R) Math Kernel Library Version 2019.0.0 Product Build 20180710 for Intel(R) 64 architecture applications</td>\n",
+       "  </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "versions('HTML')"
    ]
   },
   {
