import tarfile if we are downloading results

--- a/notebooks/5_DC_target.ipynb
+++ b/notebooks/5_DC_target.ipynb
@@ -79,6 +79,7 @@
    "outputs": [],
    "source": [
     "if rerun is False:  # download results\n",
+    "    import tarfile\n",
     "    f = simDir\n",
     "    if not os.path.isdir(f):\n",
     "        download = Utils.download(\n",
