--- a/notebooks/1_DC_Flawed_Steel_Cased_Wells.ipynb
+++ b/notebooks/1_DC_Flawed_Steel_Cased_Wells.ipynb
@@ -36,7 +36,7 @@
     "# SimPEG and related\n",
     "import discretize\n",
     "from discretize import utils\n",
-    "from SimPEG import Utils, Maps, versions\n",
+    "from SimPEG import Utils, Maps, Versions\n",
     "from SimPEG.Survey import Data\n",
     "from pymatsolver import Pardiso\n",
     "\n",
@@ -1792,7 +1792,7 @@
     }
    ],
    "source": [
-    "versions('HTML')"
+    "Versions()"
    ]
   },
   {
