--- a/notebooks/3_DC_Flawed_Steel_Cased_Wells_layer.ipynb
+++ b/notebooks/3_DC_Flawed_Steel_Cased_Wells_layer.ipynb
@@ -29,7 +29,7 @@
     "\n",
     "import discretize\n",
     "from discretize import utils\n",
-    "from SimPEG import Utils, Maps, versions\n",
+    "from SimPEG import Utils, Maps, Versions\n",
     "from SimPEG.Survey import Data\n",
     "from pymatsolver import Pardiso\n",
     "\n",
@@ -1504,7 +1504,7 @@
     }
    ],
    "source": [
-    "versions('HTML')"
+    "Versions()"
    ]
   },
   {
