--- a/notebooks/5_DC_target.ipynb
+++ b/notebooks/5_DC_target.ipynb
@@ -35,7 +35,7 @@
     "import discretize\n",
     "from discretize import utils\n",
     "from SimPEG.EM import TDEM\n",
-    "from SimPEG import Utils, Maps, versions\n",
+    "from SimPEG import Utils, Maps, Versions\n",
     "from pymatsolver import Pardiso\n",
     "\n",
     "import casingSimulations as casingSim\n",
@@ -1371,7 +1371,7 @@
     }
    ],
    "source": [
-    "versions('HTML')"
+    "Versions()"
    ]
   },
   {
