--- a/notebooks/7_DC_Approximating_Steel_Cased_Wells.ipynb
+++ b/notebooks/7_DC_Approximating_Steel_Cased_Wells.ipynb
@@ -31,7 +31,7 @@
     "import ipywidgets\n",
     "\n",
     "from SimPEG.EM import TDEM\n",
-    "from SimPEG import Utils, Maps, versions\n",
+    "from SimPEG import Utils, Maps, Versions\n",
     "\n",
     "import casingSimulations as casingSim\n",
     "\n",
@@ -1041,7 +1041,7 @@
     }
    ],
    "source": [
-    "versions('HTML')"
+    "Versions()"
    ]
   },
   {
