--- a/notebooks/2_DC_Flawed_Steel_Cased_Wells_Short_well.ipynb
+++ b/notebooks/2_DC_Flawed_Steel_Cased_Wells_Short_well.ipynb
@@ -30,7 +30,7 @@
     "\n",
     "import discretize\n",
     "from discretize import utils\n",
-    "from SimPEG import Utils, Maps, versions\n",
+    "from SimPEG import Utils, Maps, Versions\n",
     "from SimPEG.Survey import Data\n",
     "from pymatsolver import Pardiso\n",
     "\n",
@@ -853,7 +853,7 @@
     }
    ],
    "source": [
-    "versions('HTML')"
+    "Versions()"
    ]
   },
   {
