--- a/notebooks/6_DC_target_3D_cartesian.ipynb
+++ b/notebooks/6_DC_target_3D_cartesian.ipynb
@@ -31,7 +31,7 @@
     "from string import ascii_lowercase\n",
     "\n",
     "from SimPEG.EM import TDEM\n",
-    "from SimPEG import Utils, Maps, versions\n",
+    "from SimPEG import Utils, Maps, Versions\n",
     "\n",
     "import casingSimulations as casingSim\n",
     "\n",
@@ -2124,7 +2124,7 @@
     }
    ],
    "source": [
-    "versions('HTML')"
+    "Versions()"
    ]
   },
   {
