--- a/notebooks/9_DC_Approximating_Steel_Cased_Wells_Cartesian.ipynb
+++ b/notebooks/9_DC_Approximating_Steel_Cased_Wells_Cartesian.ipynb
@@ -34,7 +34,7 @@
     "import ipywidgets\n",
     "\n",
     "from SimPEG.EM import TDEM\n",
-    "from SimPEG import Utils, Maps, versions\n",
+    "from SimPEG import Utils, Maps, Versions\n",
     "\n",
     "import casingSimulations as casingSim\n",
     "\n",
@@ -1599,7 +1599,7 @@
     }
    ],
    "source": [
-    "versions('HTML')"
+    "Versions()"
    ]
   },
   {
